# freezer-project

./: README.md
esp32-logic/freezer-project/: Cargo.toml  readme.md  rust-toolchain.toml  sdkconfig.defaults  test.sh
esp32-logic/freezer-project/.cargo/: config.toml
esp32-logic/freezer-project/client-server/: client.rs  server.rs
esp32-logic/freezer-project/src/: client.rs  main.rs  server.rs  setup_bme280.rs
esp32-logic/freezer-project/src/client_server/: bme280.rs  client.rs  mod.rs  server.rs
package/: package-lock.json  package.json
package/src/app/: types.tsx
package/src/app/(DashboardLayout)/: page.tsx
package/src/app/(DashboardLayout)/components/dashboard/: AvgMeasurements.tsx  AvgTemperature.tsx  DataTable.tsx  DropDownFilters.tsx  GeneralValues.tsx  PromedioTemperatura.tsx  SalesOverview.tsx
package/src/app/(DashboardLayout)/layout/header/: Header.tsx
package/src/app/(DashboardLayout)/layout/shared/logo/: Logo.tsx
package/src/app/(DashboardLayout)/layout/sidebar/: MenuItems.tsx  Sidebar.tsx
package/src/app/(DashboardLayout)/tables/: page.tsx
package/src/app/api/door/get/: route.ts
package/src/app/api/door/post/: route.ts
package/src/app/api/esp-data/: route.ts
package/src/app/api/esp-data/get/: route.ts
package/src/app/api/esp-data/get-all/: route.ts
package/src/app/api/esp-data/post/: route.ts
package/src/app/api/test/: route.ts
