[package]
name = "freezer-project"
version = "0.1.0"
authors = [
    "Juan Pablo Aschieri <jaschieri@fi.uba.ar>",
    "Mateo Godoy Dupont <mgodoy@fi.uba.ar>",
    "Diego Emanuel Civini <dcivini@fi.uba.ar>",
    "Joaquin Rivero <jorivero@fi.uba.ar>"
    ]
edition = "2021"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
esp32framework = {git = "https://github.com/esp32framework/esp32framework", tag = "v1.0.0"}
bme280 = "0.5.1"

[build-dependencies]
embuild = { version = "0.31.3", features = ["espidf"] }
cc = "=1.1.31"